cabal-version:      3.4

name:               yum

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           yum

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:           https://github.com/YellowOnion/yum

-- The license under which the package is released.
license:            OSL-3.0

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Daniel Hill

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         daniel@gluo.nz

-- A copyright notice.
-- copyright:
category:           Development
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    default-extensions: ImportQualifiedPost
                    , RecordWildCards


    ghc-options: -threaded -rtsopts -O2 -Wall

common libs
       build-depends: base >= 4.9 && <5
                    , bytestring
                    , text
                    , filepath
                    , async
                    , haskell-gi-base
                    , gi-gdk == 4.0.*
                    , gi-gtk == 4.0.*
                    , gi-gio
                    , gi-gtk4-layer-shell
                    , gi-glib
                    , aeson
                    , pipes
                    , formatting
                    , time
                    , monad-loops


executable yum
    -- Import common warning flags.
    import:           warnings, libs

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Yummy
        Clock
        Cpu

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    -- build-depends:

    -- Directories containing source files.
    hs-source-dirs:   ./app

    -- Base language which the package is written in.
    default-language: GHC2021

